sparrow-engine/sparrow-engine-cpu/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace SparrowEngine.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "sparrow_engine";





        /// <summary>
        ///  Create a new engine from a JSON config string. Returns null on error.
        ///
        ///  # Safety
        ///  `config_json` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_engine_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_engine_new(byte* config_json);

        /// <summary>
        ///  Free an engine. All models loaded through this engine become invalid.
        ///
        ///  # Safety
        ///  `engine` must be a pointer returned by `sparrow_engine_engine_new`, or null (no-op).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_engine_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_engine_free(void* engine);

        /// <summary>
        ///  Load a model from a TOML manifest file path. Returns null on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_load_model(void* engine, byte* manifest_path);

        /// <summary>
        ///  Load a model by its ID from the model directory. Returns null on error.
        ///
        ///  Idempotent / lazy: if the model is already loaded, returns a fresh handle
        ///  to the existing ORT session (no re-creation). Mirrors the lazy-load
        ///  contract exposed by the HTTP `/v1/models/load` and `/v1/detect`+`/v1/classify`+
        ///  `/v1/audio` endpoints and the `sparrow-engine-python` package — calling twice with
        ///  the same id does not invalidate previously-issued handles.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `model_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_model_by_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_load_model_by_id(void* engine, byte* model_id);

        /// <summary>
        ///  Unload a model and free its resources.
        ///
        ///  # Safety
        ///  `model` must be a pointer returned by `sparrow_engine_load_model` / `sparrow_engine_load_model_by_id`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_unload_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_unload_model(void* model);

        /// <summary>
        ///  Load a pipeline from a TOML manifest. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_load_pipeline(void* engine, byte* manifest_path);

        /// <summary>
        ///  Load a pipeline by its ID from the model directory. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_pipeline_by_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_load_pipeline_by_id(void* engine, byte* pipeline_id);

        /// <summary>
        ///  Unload a pipeline by ID. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_unload_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_unload_pipeline(void* engine, byte* pipeline_id);

        /// <summary>
        ///  Run detection on an encoded image buffer (JPEG/PNG). Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineDetections* sparrow_engine_detect(void* model, byte* image, nuint len, SparrowEngineDetectOpts* opts);

        /// <summary>
        ///  Run detection on a raw pixel buffer. Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `pixels` must point to `h * stride` bytes of pixel data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_raw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineDetections* sparrow_engine_detect_raw(void* model, byte* pixels, uint w, uint h, uint stride, uint format, SparrowEngineDetectOpts* opts);

        /// <summary>
        ///  Run batch detection on multiple encoded images. Returns 0 on success, -1 on error.
        ///  The callback is invoked per-image with detection results.
        ///  Images are processed in batches (default 4) for higher GPU throughput.
        ///
        ///  See `SparrowEngineDetectBatchCallback` for the per-image callback contract and
        ///  additive-extension rules (both enforced by the Phase 3.5 S5/S6 handoff).
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `images` must point to `image_count` `SparrowEngineImageBuffer` structs.
        ///  - `opts` may be null (use defaults).
        ///  - `callback` must be valid for the duration of this call.
        ///  - `batch_size` of 0 uses the default (4).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_batch", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_detect_batch(void* model, SparrowEngineImageBuffer* images, nuint image_count, SparrowEngineDetectOpts* opts, nuint batch_size, delegate* unmanaged[Cdecl]<nuint, SparrowEngineDetections*, void*, void> callback, void* user_data);

        /// <summary>
        ///  Run classification on an encoded image buffer (JPEG/PNG). Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_classify", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineClassifyResult* sparrow_engine_classify(void* model, byte* image, nuint len, SparrowEngineClassifyOpts* opts);

        /// <summary>
        ///  Run a pipeline (detect → classify) on an encoded image. Returns null on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `detect_opts` and `classify_opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_run_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEnginePipelineResult* sparrow_engine_run_pipeline(void* engine, byte* pipeline_id, byte* image, nuint len, SparrowEngineDetectOpts* detect_opts, SparrowEngineClassifyOpts* classify_opts);

        /// <summary>
        ///  Run audio detection on a WAV file. Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer (audio model with mel spectrogram preprocessing).
        ///  - `audio_path` must be a valid, non-null, null-terminated UTF-8 path to a WAV file.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_audio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineAudioResult* sparrow_engine_detect_audio(void* model, byte* audio_path, SparrowEngineAudioDetectOpts* opts);

        /// <summary>
        ///  Run audio detection on a WAV file with V2 top-K classes. Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer (audio model with mel spectrogram preprocessing).
        ///  - `audio_path` must be a valid, non-null, null-terminated UTF-8 path to a WAV file.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_audio_v2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineAudioResult_v2* sparrow_engine_detect_audio_v2(void* model, byte* audio_path, SparrowEngineAudioDetectOpts* opts);
